tests/neg/i18867.scala
//> using options -Werror

def foo(x: Int) = x

def test = foo _ // error
